fix: исправить методы getTaskById(), getEpicById(), getSubTaskById()