@@ -2,22 +2,22 @@ package services;
 
 import entity.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
 
     private static final int INITIAL_CAPACITY = 10;
 
-    private final List<Task> listLastTasks = new ArrayList<>(INITIAL_CAPACITY);
+    private final LinkedList<Task> listLastTasks = new LinkedList<>();
 
     public List<Task> getHistory() {
-        return listLastTasks;
+        return new LinkedList<>(listLastTasks);
     }
 
     public void add(Task task) {
         if (listLastTasks.size() == INITIAL_CAPACITY) {
-            listLastTasks.remove(0);
+            listLastTasks.removeFirst();
         }
         listLastTasks.add(task);
     }
